--- a/module_mine/build.gradle
+++ b/module_mine/build.gradle
@@ -15,6 +15,13 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
+        //Arouter路由配置
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [moduleName: project.getName()]
+            }
+        }
+
     }
 
     buildTypes {
@@ -41,10 +48,14 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:26.0.0-beta1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+    implementation              deps.supports.appcompat_v7
+    implementation              deps.supports.constraint_layout
+    testImplementation          deps.supports.junit
+    androidTestImplementation   deps.supports.test_runner
+    androidTestImplementation   deps.supports.test_espresso_core
+
+    compile                     deps.supports.arouter_api
+    annotationProcessor         deps.supports.arouter_compiler
+
     implementation project(':lib_common')
 }
