--- a/module_main/src/main/module/AndroidManifest.xml
+++ b/module_main/src/main/module/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.cfox.module_main">
 
     <application
+        android:name="debug.DebugApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
