--- a/config.gradle
+++ b/config.gradle
@@ -17,11 +17,12 @@ def versions = [:]
 versions.v_appcompat_v7                 = '26.0.0-beta1'
 versions.v_constraint_layout            = '1.1.2'
 versions.v_junit                        = '4.12'
-versions.v_test_runner                  = '1.0.2'
-versions.v_test_espresso_core           = '3.0.2'
+versions.v_test_runner                  = '1.0.1'
+versions.v_test_espresso_core           = '3.0.1'
 versions.v_multidex                     = '1.0.3'
 versions.v_arouter_api                  = '1.4.0'
 versions.v_arouter_compiler             = '1.2.1'
+versions.v_design                       = '26.0.0-beta1'
 
 
 
@@ -34,6 +35,7 @@ supports.multidex               = "com.android.support:multidex:$versions.v_mult
 
 supports.appcompat_v7           = "com.android.support:appcompat-v7:$versions.v_appcompat_v7"
 supports.constraint_layout      = "com.android.support.constraint:constraint-layout:$versions.v_constraint_layout"
+supports.design                 = "com.android.support:design:$versions.v_design"
 //arouter
 supports.arouter_api            = "com.alibaba:arouter-api:$versions.v_arouter_api"
 supports.arouter_compiler       = "com.alibaba:arouter-compiler:$versions.v_arouter_compiler"
