update module view

--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -27,6 +27,16 @@ android {
         }
     }
 
+    sourceSets {
+        main {
+            if (!Boolean.valueOf(deps.isModule)) {
+                java {
+                    exclude 'debug/**'
+                }
+            }
+        }
+    }
+
 }
 
 dependencies {
